Update docs